--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,3 @@
-Mubarak Yahaya
+# This file lists all individuals having contributed content to the repository
+
+Mubarak Yahaya<mubarakg4u@gmail.com>
