--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals having contributed content to the repository
 
 Mubarak Yahaya<mubarakg4u@gmail.com>
+Wittygod Okoro<Cyrilodinaka32@gmail.com>
